Cues not rendered when they should be https://bugs.webkit.org/show_bug.cgi?id=106943

Patch by Victor Carbune <vcarbune@chromium.org> on 2013-01-16
Reviewed by Eric Carlson.

Source/WebCore:

Forced rendering update, even if the active set of cues didn't change.

Test: media/track/track-cue-rendering-mode-changed.html

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::updateActiveTextTrackCues): If exiting early,
update the cues rendered by the text track container.
(WebCore::HTMLMediaElement::textTrackModeChanged): Trigger update of the
re-checking the active cues and render the ones not yet on screen.

LayoutTests:

* media/track/track-cue-rendering-mode-changed-expected.txt: Added.
* media/track/track-cue-rendering-mode-changed.html: Added.
* media/video-controls-captions-expected.txt: Updated.

Canonical link: https://commits.webkit.org/125307@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139932 268f45cc-cd09-0410-ab3c-d52691b4dbfc